--- a/css/root.css
+++ b/css/root.css
@@ -1,6 +1,7 @@
 :root{
     --branco: #FFFFFF;
     --cinza: #E8E8E8;
+    --cinza-escuro: #979797;
     --preto: #000000;
     --vermelho: #D92727;
     --titulo: "Nunito", sans-serif;
