--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-left: 600px;
-    margin-top: 90px;
+ margin-top: 150px;
 
 }
 
@@ -40,7 +40,7 @@ body {
 
 } 
 
-.passo:not(:last-child)::before { 
+.passo:not(:last-child)::after { 
     content: ""; 
     position: absolute; 
     width: 170px; /* Ajuste o comprimento da linha conforme necessário */ 
@@ -51,7 +51,6 @@ body {
     transform: translateY(-50%); 
 
 } 
-
 
 .passo2 { 
     display: flex; 
@@ -209,7 +208,7 @@ button:hover {
     position: fixed; 
     width: 500px; 
     max-width: 600px; 
-    height: 840px; 
+    height: 900px; 
     right: 10%;  
     top: 54px; 
     background-color: var(--vermelho);  
@@ -248,7 +247,7 @@ button:hover {
         justify-content: center;
         align-items: center;
         margin-left: 270px;
-        margin-top: 90px;
+        margin-top: 150px;
     
     }
     .desc-container { 
@@ -365,7 +364,7 @@ button {
     justify-content: center;
     align-items: center;
     margin-left: 600px;
- margin-top: 90px;
+ margin-top: 150px;
 
 }
 
