--- a/css/login.css
+++ b/css/login.css
@@ -59,7 +59,8 @@ main{
     color: var(--vermelho);
     font-size: 16px;
     font-weight: 600;
+    margin-top: -90px;
     padding-top: 8px;
-    padding-left: 16px;
+    padding-left: 540px;
     cursor: pointer;
 }
