--- a/css/motoristas.css
+++ b/css/motoristas.css
@@ -67,8 +67,7 @@ body {
 #openModal:hover {
     background-color: #aa0c0c;
 }
-
-.viagens {
+.motoristas{
     color: red;
     text-decoration: underline;
 }
