ajuste das cores

--- a/css/quem-somos.css
+++ b/css/quem-somos.css
@@ -76,7 +76,7 @@ body {
 }
 
 .button.test {
-    background-color: #BB4848;
+    background-color: #D92727;
     color: #ffffff;
     width: 200px;
     height: 50px;
@@ -183,7 +183,7 @@ body {
 }
 
 .footer {
-    background-color: #BB4848;
+    background-color: #D92727;
     padding: 1rem;
     border-top: 2px solid #c7c7c7;
 }
