--- a/css/contatos.css
+++ b/css/contatos.css
@@ -75,7 +75,7 @@ body {
 }
 
 .button.test {
-    background-color: #BB4848;
+    background-color: #D92727;
     color: #ffffff;
     width: 200px;
     height: 50px;
@@ -164,7 +164,7 @@ p {
 }
 
 .contact-box {
-    background-color: #ba3a34;
+    background-color: #D92727;
     padding: 20px;
     border-radius: 8px;
     font-family: "Poppins", sans-serif;
@@ -180,7 +180,7 @@ p {
 }
 
 .footer {
-    background-color: #BB4848;
+    background-color: #D92727;
     padding: 1rem;
     border-top: 2px solid #c7c7c7;
 }
