--- a/telaHome.css
+++ b/telaHome.css
@@ -76,7 +76,7 @@ body {
 }
 
 .button.test {
-    background-color: #BB4848;
+    background-color: #D92727;
     color: #ffffff;
     width: 200px;
     height: 50px;
@@ -144,7 +144,7 @@ body {
 .info-item h2,
 .info-item2 h2,
 .info-item3 h2 {
-    color: #cc3333;
+    color:#D92727;
     font-size: 24px;
     margin-bottom: 10px; 
     align-items: center;
@@ -183,7 +183,7 @@ body {
 }
 
 .footer {
-    background-color: #BB4848;
+    background-color: #D92727;
     padding: 1rem;
     border-top: 2px solid #c7c7c7;
 }
