--- a/css/opcaocadastro.css
+++ b/css/opcaocadastro.css
@@ -27,7 +27,7 @@ main {
 .button {
   width: 500px;
   height: 280px; 
-  background-color: #BB4848;
+  background-color:#D92727;
   color: white;
   font-size: 20px;
   border: none; 
@@ -88,10 +88,11 @@ main {
 
 .link a {
   text-decoration: none; 
-  color: #BB4848;
+  color: #D92727;
 }
 
 .link p {
   margin: 0; 
-  margin-top: 30px;
+  font-weight: 700;
+  margin-top: 200px;
 }
