--- a/css/contatos.css
+++ b/css/contatos.css
@@ -103,7 +103,7 @@ body {
 }
 
 .background-header {
-    background-image: url('/img/BACKGROUND-LIMPO.PNG');
+    background-image: url('../css/img/BACKGROUND-LIMPO.PNG');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -127,7 +127,7 @@ body {
 .container {
     position: relative;
     height: 100vh;
-    background-image: url('/img/BACKGROUND-LIMPO.PNG');
+    background-image: url('../css/img/BACKGROUND-LIMPO.PNG');
     background-size: cover;
     background-position: center;
     font-family: "Poppins", sans-serif;
