--- a/css/quem-somos.css
+++ b/css/quem-somos.css
@@ -104,7 +104,7 @@ body {
 }
 
 .background-header {
-    background-image: url('/img/fundo\ quem\ somos.png');
+    background-image: url('../css/img/fundo\ quem\ somos.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
