--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -8,6 +8,13 @@ body {
     align-items: center;  
 } 
 
+.seta-esquerda{
+    height: 45px;
+    width: auto;
+    margin-left: 10px;
+    margin-bottom: 650px;
+    
+    }
 .container {
     justify-content: center;
     align-items: center;
@@ -28,6 +35,7 @@ body {
     width: 100%;  
     text-align: center;  
 }  
+
 
 .passo { 
     display: flex; 
@@ -202,6 +210,13 @@ button:hover {
     margin-left: -950px;
 }
 
+.palavra{
+    font-size: 14px;
+    color: var(--vermelho);
+    justify-content: end;
+    font-weight: 600;
+
+}
 .desc-container { 
     position: fixed; 
     max-width: 600px; 
