--- a/css/motoristas.css
+++ b/css/motoristas.css
@@ -28,7 +28,7 @@ body {
 }
 
 .profile-container .name {
-    color: var(--vermelho);
+    color: red;
 }
 
 .button-group {
@@ -51,7 +51,7 @@ body {
 }
 
 #openModal {
-    background-color: var(--vermelho);
+    background-color: #D92727;
     margin-right: 20px;
     color: white;
     border: none;
@@ -68,12 +68,12 @@ body {
     background-color: #aa0c0c;
 }
 .motoristas{
-    color: var(--vermelho);
+    color: red;
     text-decoration: underline;
 }
 
 .control-section {
-    background-color: var(--vermelho);
+    background-color: #d32f2f;
     color: white;
     padding: 40px;
     text-align: left;
@@ -90,23 +90,16 @@ body {
 }
 
 .control-section h1 {
-    font-size: 32px; 
-    font-weight: 800; 
-    color: var(--branco); 
-
+    font-size: 24px;
+    margin-bottom: 20px;
 }
 .control-section p {
     font-size: 16px;
     max-width: 500px;
-    font-weight: 300; 
 }
 
 .illustration img {
-    width: 400px;
-    height: auto;
-    margin-bottom: -46px;
-    margin-right: -40px;
-
+    width: 200px;
 }
 
 /* Estilos para o fundo do modal */
@@ -355,7 +348,7 @@ body {
 .remove-button {
     margin-top: 10px; /* Espaço acima do botão */
     padding: 8px 12px; /* Espaçamento interno do botão */
-    background-color: var(--vermelho); /* Cor de fundo vermelha */
+    background-color: #e74c3c; /* Cor de fundo vermelha */
     color: white; /* Cor do texto */
     border: none; /* Remove a borda padrão */
     border-radius: 4px; /* Borda arredondada */
