--- a/css/chat.css
+++ b/css/chat.css
@@ -172,10 +172,14 @@ h1{
     font-weight: 500;
 }
 
-.chat-content{
+.chat-content {
     background-color: #f8f7f7;
-    height: 100%;
+    margin-right: 20px;
+    padding: 10px;
+    height: 100%; 
+    overflow-y: auto; 
 }
+
 .send-message{
     height: 80px;
     background-color: #FFFFFF;
