--- a/css/motoristas.css
+++ b/css/motoristas.css
@@ -298,7 +298,7 @@ body {
     border-radius: 8px; /* Bordas arredondadas */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para dar profundidade */
     width: 400px; /* Largura fixa dos cards */
-    height: 250px; /* Altura fixa para acomodar a imagem e informações */
+    height: 300px; /* Altura fixa para acomodar a imagem e informações */
     overflow: hidden; /* Evitar que o conteúdo transborde */
     transition: transform 0.3s; /* Transição suave */
     display: flex; /* Usar flexbox para organizar o conteúdo */
@@ -312,6 +312,7 @@ body {
 /* Conteúdo do card */
 .motorista-info {
     padding-left: 12px;
+    padding-top: 10px;
     display: flex;
     flex-direction: column; /* Empilha os elementos verticalmente */
     justify-content: space-between; /* Distribui espaço entre os elementos */
