--- a/css/chat.css
+++ b/css/chat.css
@@ -26,6 +26,18 @@ body{
     height: 80px;
 }
 
+.seta-voltar{
+    width: 50px;
+    height: 50px;
+}
+
+.seta-voltar img{
+    width: 30px;
+    height: 30px;
+    margin: 10px;
+}
+
+
 .user-icon{
     height: 70px;
     width: 70px;
